--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "apollo-angular": "^4.2.1",
     "apollo-cache-inmemory": "^1.6.6",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
